infra/woodpecker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: woodpecker
  annotations:
    scheduler.alpha.kubernetes.io/defaultTolerations: '[{"key": "location", "operator": "Equal", "value": "external", "effect": "NoSchedule"}]'
