infra/woodpecker/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: woodpecker
  namespace: woodpecker
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`ci.k.joshuachp.dev`)"
      kind: Rule
      services:
        - name: woodpecker-server
          port: http
  tls:
    domains:
      - main: k.joshuachp.dev
        sans:
          - "*.k.joshuachp.dev"
